--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
 
 # Thiết lập quyền để job cập nhật GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
